theme.css and template.html: Solve overflow problem in code and a tags
Over-long inline <code> tag or long literal link in <a> tag used to
overflow the container. This is especially bad on phones where width is
very limited. This commit hopefully solves the overflow problem. Still
no smarter word breaking, but it's probably just an unfortunate
limitation of HTML.

--- a/source/css/theme.css
+++ b/source/css/theme.css
@@ -107,12 +107,15 @@ h2 {
 
 a {
     color: #333;
+    word-wrap: break-word;
 }
 
 code {
     font-size: 0.95em;
     color: #777;
     font-family: 'Droid Sans Mono', 'Courier', monospace;
+    white-space: pre-wrap;
+    word-wrap: break-word;
 }
 
 pre {
@@ -131,6 +134,8 @@ pre code {
     font-size: 0.91em;
     line-height: 135%;
     color: #333;
+    white-space: pre;
+    word-wrap: normal;
 }
 
 blockquote {
